--- a/lab-1-Ex1.html
+++ b/lab-1-Ex1.html
@@ -1,6 +1,6 @@
 <html>
     <body>
-        <h1>
+        <h1 style="text-align:center;">
             This is a HTML practice exercise
         </h1>
         <hr>
